<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/statusbar_bg" >

        <Button
            android:id="@+id/about_back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back_button_style" />

        <TextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/about_back_button"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="20sp" /> 
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/app_icon" />

        <TextView
            android:id="@+id/copyright_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/copyright"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/copyright_info"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:text="@string/company_name"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/app_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/company_name"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>